@@ -28,6 +28,13 @@ public class ProductService {
     }
 
     public List<Product> getAllProducts() {
+//        Iterable<Product> it=productRepo.findAll();
+//        ArrayList<Product> products=new ArrayList<>();
+//        it.forEach(products::add);
+//        return products;
+
+//        return StreamSupport.stream(productRepo.findAll().spliterator(), false)
+//                    .collect(Collectors.toList());
         return productRepo.findAll();
     }
 
@@ -39,13 +46,13 @@ public class ProductService {
         if (categorie == CategorieBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getCategorie() == categorie)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<Product> filterByTip(TipBautura tip) {
         if (tip == TipBautura.ALL) return getAllProducts();
         return getAllProducts().stream()
                 .filter(p -> p.getTip() == tip)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
